0027198: OSD_Environment - use wide characters API on Windows